force-app/main/default/objects/Booking__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Agent</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>