force-app/main/default/objects/Booking__c/fields/Number_of_Travellers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Travellers__c</fullName>
    <description>Number of Travellers for Booking</description>
    <label>Number of Travellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>