force-app/main/default/objects/Booking__c/fields/Package_ID__c.field-meta.xml
<CustomField>
    <fullName>Package_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Package ID of Booking</description>
    <label>Package ID</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>