force-app/main/default/objects/Booking__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>RequestID of Booking</description>
    <displayFormat>RID-{0000}</displayFormat>
    <label>Request ID</label>
    <type>AutoNumber</type>
</CustomField>