force-app/main/default/objects/Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of Booking</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Booking In Progress</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Trip Complete</fullName>
            </value>
            <value>
                <fullName>Trip In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>